<resources>
    <string name="app_name">RunAppNaples</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_luoghi">Luoghi</string>
    <string name="title_activity_bpm">Bpm</string>
    <string name="title_activity_contapassi">Contapassi</string>




    <string name="benvenuto">Benvenuto</string>
    <string name="luoghi">Luoghi</string>
    <string name="maps">Maps</string>
    <string name="meteo">Meteo</string>
    <string name="contapassi">Contapassi</string>
    <string name="bpm">Frequenza cardiaca</string>
    <string name="default_text">Calcolo bpm in corso</string>


    <string name="destinazione">Destinazione</string>
    <string name="orari">Orari</string>
    <string name="telefono">Telefono</string>
    <string name="servizi">Servizi</string>
    <string name="sitoweb">Sito Web</string>

    <string name="passipercorsioggi">Passi percorsi oggi</string>
    <string name="passitotalipercorsi">Passi totali percorsi</string>


</resources>