<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shout_napoli_4">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/benvenuto"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline11" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline12">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="338dp"
            android:layout_height="140dp"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/b_luoghi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/luoghi"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/b_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/maps"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/b_contapassi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/contapassi"
            android:textColor="@android:color/background_light" />


        <Button
            android:id="@+id/b_bpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/bpm"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="156dp" />

</android.support.constraint.ConstraintLayout>